--- a/MVCLearning/Web.config
+++ b/MVCLearning/Web.config
@@ -94,4 +94,16 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ISampleWCFService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:1669/SampleWCFService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISampleWCFService"
+        contract="SampleWCFServiceReference.ISampleWCFService" name="BasicHttpBinding_ISampleWCFService" />
+    </client>
+  </system.serviceModel>
 </configuration>
